--- a/landing_page/index.html
+++ b/landing_page/index.html
@@ -1,1 +1,49 @@
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
+    <title>Tech Solutions</title>
+  </head>
+  <body>
+    <header>
+      <h1>Tech Solutions</h1>
+      <p>Welcome to our amazing product/service!</p>
+    </header>
 
+    <section class="main-section">
+      <div class="left-column">
+        <h2>About Us</h2>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla eget
+          felis urna.
+        </p>
+      </div>
+      <div class="right-column">
+        <h2>Sign Up</h2>
+        <form id="signup-form">
+          <label for="name">Name:</label>
+          <input type="text" id="name" name="name" required />
+          <label for="phone">Phone:</label>
+          <input type="tel" id="phone" name="phone" required />
+          <label for="email">Email:</label>
+          <input type="email" id="email" name="email" required />
+          <label for="address">Address:</label>
+          <textarea id="address" name="address" required></textarea>
+          <button type="submit">Sign Up</button>
+        </form>
+      </div>
+    </section>
+
+    <footer>
+      <p>&copy; 2024 Tech Solutions. All rights reserved.</p>
+      <p>
+        Contact: Abhijeet Kale | Phone: 9112940723 | Email:
+        kaleabhi2004@gmail.com | Address: Gokul Shirgaon, Kolhapur
+      </p>
+    </footer>
+
+    <script src="script.js"></script>
+  </body>
+</html>
